tests/toylang/neg/001527_mutation.toylang
program a = { var 0 : bool; } .
